[tool.poetry]
name = "repl_python3_Lugin-but-no-Pygame-"
version = "0.1.0"
description = ""
authors = ["Iplay6432 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2022.4.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
